colang-cli/tests/samples/features/structs/good/copy_by_value.co
struct Point {
  x: int
  y: int
}

fun main() {
  var p: Point;
  p.x = 2;
  assert(p.x == 2);

  var q = p;
  assert(q.x == 2);

  q.x = 4;
  assert(q.x == 4);
  assert(p.x == 2);
}
