colang-cli/tests/samples/features/structs/compile_error/method_as_field.co
fun main() {
  var a = [42];
  a.len();
  var y = a.len;
}
